objects/advpm__APTaskTemplate__c.object
<CustomObject>
    <customHelpPage>advpm__HelpAP_Task</customHelpPage>
    <description>Action Plan Task detail</description>
    <fields>
        <fullName>advpm__APTaskTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependency</label>
        <referenceTo>advpm__APTaskTemplate__c</referenceTo>
        <relationshipLabel>AP Tasks</relationshipLabel>
        <relationshipName>R00NR0000000VcWbMAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Action_Plan__c</fullName>
        <label>Action Plan</label>
        <referenceTo>advpm__ActionPlan__c</referenceTo>
        <relationshipName>R00NR0000000VccFMAS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>advpm__ActivityDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Activity_Type__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__DaysFromStart__c</fullName>
        <label>Days After</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Dependent__c</fullName>
        <label>Dependent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__DurationInMinutes__c</fullName>
        <label>Duration (in Minutes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Minutes_Reminder__c</fullName>
        <label>Minutes Reminder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__SendEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send Email Notification of Task creation.</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Start_Time_Display__c</fullName>
        <formula>IF( ISPICKVAL(advpm__Activity_Type__c,&apos;Event&apos;),IF(MOD(FLOOR(VALUE(advpm__Start_Time__c) / 60),12) == 0,&apos;12&apos;,TEXT(MOD(FLOOR(VALUE(advpm__Start_Time__c) / 60),12))) &amp; &apos;:&apos; &amp; IF(MOD(VALUE(advpm__Start_Time__c) ,60)==0,&apos;00&apos;,TEXT(MOD(VALUE(advpm__Start_Time__c) ,60)))+&apos; &apos;+ IF( VALUE(advpm__Start_Time__c)&gt;=720, &apos;PM&apos;,&apos;AM&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Start_Time__c</fullName>
        <label>Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Time_Reminder__c</fullName>
        <formula>IF(advpm__Reminder__c ,IF(MOD(FLOOR(VALUE(advpm__Minutes_Reminder__c) / 60),12) == 0,&apos;12&apos;,TEXT(MOD(FLOOR(VALUE(advpm__Minutes_Reminder__c) / 60),12))) &amp; &apos;:&apos; &amp; IF(MOD(VALUE(advpm__Minutes_Reminder__c) ,60)==0,&apos;00&apos;,TEXT(MOD(VALUE(advpm__Minutes_Reminder__c) ,60)))+&apos; &apos;+ IF( VALUE(advpm__Minutes_Reminder__c)&gt;=720, &apos;PM&apos;,&apos;AM&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Reminder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__User_Source_Field__c</fullName>
        <label>Assigned To Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__User_Type__c</fullName>
        <label>Assigned To Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NR0000000Vd7NMAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__taskIndex__c</fullName>
        <label>taskIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AP Task</label>
    <nameField>
        <label>APTaskTemplate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AP Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>advpm__DaysGreaterThanZero</fullName>
        <active>false</active>
        <description>advpm__DaysFromStart__c  &lt; 0</description>
        <errorConditionFormula>1 = 0</errorConditionFormula>
        <errorDisplayField>advpm__DaysFromStart__c</errorDisplayField>
        <errorMessage>You must enter a positive value</errorMessage>
    </validationRules>
</CustomObject>